fix display and usability on small devices

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 .App {
   display: inline;
   text-align: center;
+  min-width: 260px;
 }
 
 
@@ -9,13 +10,14 @@ h1, span {
   margin: 0;
   padding: 0;
   align-self: center;
+  display: inline-flex;
 }
 
 h1 {
   right: 0;
   top: 0;
   position: fixed;
-
+  display: inline-flex;
 }
 
 .headcontainer {
@@ -24,11 +26,12 @@ h1 {
   padding: 0;
   display: flex;
   overflow: visible;
-  margin-left: 220px; 
-  flex-wrap: nowrap;
+  margin-left: 0; 
+  flex-wrap: wrap;
 }
 
 .mapcontainer {
+
   font-size: 28px; 
   padding: 0px ;
 }
@@ -37,15 +40,19 @@ h1 {
   height: 100%;
     width: 220px;
     position: fixed;
-    top: 0;
+    top: 8%;
     left: 0;
     background-color: #111;
     
     padding-top: 20px;
 }
 button {
-
+  display: inline-flex;
   margin-left: 0;
+  height: 30px;
+  top:0;
+  margin-top: 0;
+  padding-top: 0;
 }
 
 h1 {
@@ -55,3 +62,4 @@ h1 {
 ol {
   padding-left: 15px;
 }
+
